[package]
name = "wayfinder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = { version = "0.26", features = ["crossterm"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "sync"] }
content_inspector = "0.2"
infer = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
fs_extra = "1.3"
